# manga-book-store-system

./: .coverage  .gitignore  AGILE_PLANNING_DOCUMENT.md  AGILE_REFLECTION.md  ARCHITECTURE.md  ASSIGNMENT5_REFLECTION.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTIONS.md  CONTRIBUTION_PLAN.md  MERGED_PRS.md  PRODUCT_BACKLOG.md  README.md  REFLECTION.md  REFLECTION_14.md  REFLECTION_15.md  REQUIREMENTS_REFLECTION.md  ROADMAP.md  SPECIFICATION.md  SPRINT_PLAN.md  STAKEHOLDER_ANALYSIS.md  SYSTEM_REQUIREMENTS.md  TEST_CASES.md  USER_STORIES.md  USE_CASE_AND_TEST_REFLECTION.md  USE_CASE_DIAGRAM.md  USE_CASE_SPECIFICATIONS.md  VOTING_RESULTS.md  kanban_explanation.md  pyproject.toml  pytest.ini  reflection.md  requirements.txt  template_analysis.md
api/: app.py  schemas.py
creational_patterns/: __init__.py  abstract_factory.py  builder.py  factory_method.py  prototype.py  simple_factory.py  singleton.py
docs/: assignment-9-class-diagram.md  assignment-9-domain-model.md  assignment-9-reflection.md  openapi.json  response_1779062185357.json
factories/: __init__.py  repository_factory.py
repositories/: __init__.py  base.py  manga_repository.py  order_repository.py  user_repository.py
services/: exceptions.py  manga_service.py  order_service.py  user_service.py
src/: __init__.py  cart.py  catalog.py  orders.py  users.py
tests/: __init__.py  test_abstract_factory.py  test_broken.py  test_builder.py  test_cart_domain.py  test_cart_domain_extra.py  test_factory_method.py  test_final_fail.py  test_inmemory_manga_repository_crud.py  test_inmemory_order_repository_crud.py  (+8 more)
(+168 files in other folders)
